# Minecraft_editor

./: .gitignore  CMakeLists.txt  LICENSE.md  Minecraft.sln  README.md
Doc/: Note concernant le projet Minecraft.docx  README.md
Doc/Screenshots/RBF/: rbf_1.txt  rbf_2.txt  rbf_4.txt  rbf_5.txt  rbf_7.txt  rbf_8.txt
Doc/oldReadme/: README.md
Minecraft/: Minecraft.vcxproj  Minecraft.vcxproj.filters  imgui.ini
Minecraft/res/: README.md  rbf1.txt  rbf2.txt  rbf3.txt
Minecraft/res/rbf/: rbf1.txt  rbf2.txt  rbfHills.txt  rbf_3.txt
Minecraft/res/scenes/: maison.txt
Minecraft/res/shaders/: 3D.shader  3DGrid.shader  3Dcolor.shader  3Dmultitexture.shader  Basic.shader  Cube.shader  CubeDL.shader  CubePL.shader  CubeSelection.shader  CubeSelector.shader  GroundSelection.shader  Planette.shader  Selector.shader  testGeometrie.shader
Minecraft/res/textures/Cube/: desktop.ini
Minecraft/res/textures/blocks/: grass_side.tga  grass_side_snowed.tga
Minecraft/src/: App.cpp  App.h  Application.cpp  Application_Main.cpp  CMakeLists.txt  Camera.cpp  Camera.h  DepthBuffer.cpp  DepthBuffer.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Minecraft/src/GraphicEngine/: App.cpp  App.h  Camera.cpp  Camera.h  DepthBuffer.cpp  DepthBuffer.h  FrameBuffer.cpp  FrameBuffer.h  GLerror.cpp  GLerror.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Minecraft/src/Interaction/: CubeSelector.cpp  CubeSelector.h  CubeTextureList.cpp  CubeTextureList.h  Interface.cpp  Interface.h  LightManager.cpp  LightManager.h  RBF.cpp  RBF.h
Minecraft/src/MinecraftEditor/Graphic/Forms/: Cube.cpp  Cube.h  Grid.cpp  Grid.h
Minecraft/src/MinecraftEditor/Graphic/Lights/: LightManager.cpp  LightManager.h
Minecraft/src/MinecraftEditor/Graphic/Renderers/: CubeRenderer.cpp  CubeRenderer.h  GridRenderer.cpp  GridRenderer.h
Minecraft/src/MinecraftEditor/Interaction/: CubeSelector.cpp  CubeSelector.h  Interface.cpp  Interface.h  KeyBoard.cpp  KeyBoard.h  RBF.cpp  RBF.h
Minecraft/src/MinecraftEditor/Math/: RBF.cpp  RBF.h
Minecraft/src/RBF/: RBF.cpp  RBF.h  mainRBF.cpp  rbf.txt
Minecraft/src/Renderer/: CubeRenderer.cpp  CubeRenderer.h  CubeSelectionRenderer.cpp  CubeSelectionRenderer.h  GridRenderer.cpp  GridRenderer.h  GroundSelectionRenderer.cpp  GroundSelectionRenderer.h
Minecraft/src/forms/: Cube.cpp  Cube.h  Grid.cpp  Grid.h  Gridv2.cpp  Gridv2.h
Minecraft/src/modes/: Mode.cpp  Mode.h  ModeClearColor.cpp  ModeClearColor.h  ModeEditor.cpp  ModeEditor.h  ModeImGUITest.cpp  ModeImGUITest.h  ModePlanette.cpp  ModePlanette.h  ModeTexture2D.cpp  ModeTexture2D.h  TestClearColor.h  TestTexture2D.cpp
Minecraft/src/tests/: ModePlanette.cpp  ModePlanette.h  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
WinDependencies/SDL2/Win32/: SDL2.lib
WinDependencies/SDL2/x64/: SDL2.lib  SDL2main.lib
